# banking-reliever

./: .gitattributes  .gitignore  .kpack.yaml  CLAUDE.md  README.md  prompt.md
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/deployment/dev/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.dev  variables.tf  versions.tf
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/deployment/local/: .env  Dockerfile  README.md  docker-compose.yml  platform.compose.yml
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/src/bsp_sco_stub/: __init__.py  __main__.py  config.py  envelope.py  fixtures.py  publisher.py  schema_validator.py
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/src/bsp_sco_stub/schemas/: BNK.RLVR.RVT.BSP.001.ENTRY_SCORE_COMPUTED.schema.json  BNK.RLVR.RVT.BSP.001.SCORE_THRESHOLD_REACHED.schema.json  CMD.BSP.001.SCO.RECOMPUTE_SCORE.schema.json
sources/BNK.RLVR.CAP.BSP.001.SCO/stub/tests/: conftest.py  test_atomicity.py  test_config.py  test_envelope.py  test_payload_validation.py
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/deployment/dev/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.dev  variables.tf  versions.tf
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/deployment/local/: .env  Dockerfile  README.md  docker-compose.yml  platform.compose.yml
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/migrations/: 001_init.sql  002_pseudonymise.sql  003_anchor_history.sql
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/src/reliever_beneficiary_anchor/: __init__.py
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/src/reliever_beneficiary_anchor/application/: __init__.py  dto.py  handlers.py  ports.py
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/tests/: conftest.py
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/tests/integration/: conftest.py  test_history_projection.py  test_lifecycle.py  test_mint_get.py  test_pseudonymise.py  test_update.py
sources/BNK.RLVR.CAP.SUP.002.BEN/backend/tests/unit/: test_aggregate.py  test_etag.py  test_history_consumer.py  test_history_etag.py  test_history_handler.py  test_jwt.py  test_lifecycle_aggregate.py  test_lifecycle_handler.py  test_migration_pii_free.py  test_mint_handler.py  test_pseudonymise_aggregate.py  test_pseudonymise_handler.py  test_retention_job.py  test_schema_loader.py  test_update_aggregate.py  test_update_handler.py
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/config/: stub.toml
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/deployment/dev/terraform/: .gitignore  README.md  (+5 more)
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/deployment/local/: .env  Dockerfile  README.md  docker-compose.yml  platform.compose.yml
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/fixtures/: anchors.json  history.json
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/src/reliever_beneficiary_identity_anchor_stub/: __init__.py  app.py  endpoints.py  fixture_store.py  payload_factory.py  publisher.py  schema_validator.py  settings.py
sources/BNK.RLVR.CAP.SUP.002.BEN/stub/tests/: conftest.py  test_fixtures.py  test_http_api.py  test_payload_factory.py  test_publisher.py
(+380 files in other folders)
