[project]
name = "reliever-beneficiary-anchor"
version = "0.1.0"
description = "BNK.RLVR.CAP.SUP.002.BEN — Beneficiary Identity Anchor microservice (TASK-002 — MINT + GET foundation)"
requires-python = ">=3.12"
dependencies = [
  # HTTP + ASGI
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # Persistence — psycopg 3 async (chosen over asyncpg for richer type adaptation
  # and easier sync/async parity for the outbox relay)
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  # Messaging
  "aio-pika>=9.4",
  # Validation
  "jsonschema>=4.21",
  # Auth — decode-only (gateway verifies signature)
  "python-jose[cryptography]>=3.3",
  # Identifiers — RFC-9562 UUIDv7. PyPI package is "uuid7" but the import
  # module is "uuid_extensions.uuid7".
  "uuid7>=0.1.0",
  # Observability
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "anyio>=4.6",
  "ruff>=0.7",
  "testcontainers[postgres,rabbitmq]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reliever_beneficiary_anchor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL + RabbitMQ (docker compose up first)",
]
