[project]
name = "reliever-beneficiary-identity-anchor-stub"
version = "0.1.0"
description = "Development stub for BNK.RLVR.CAP.SUP.002.BEN — Beneficiary Identity Anchor (TASK-001)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "aio-pika>=9.4",
  "structlog>=24.4",
  "jsonschema>=4.23",
  "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reliever_beneficiary_identity_anchor_stub"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
